make axis titles in amp phase plot math mode

--- a/figures/amp-phase-plot.tex
+++ b/figures/amp-phase-plot.tex
@@ -1,4 +1,4 @@
-% Created by tikzDevice version 0.12.3.1 on 2023-02-16 23:03:34
+% Created by tikzDevice version 0.12.3.1 on 2023-02-16 23:05:54
 % !TEX encoding = UTF-8 Unicode
 \begin{tikzpicture}[x=1pt,y=1pt]
 \definecolor{fillColor}{RGB}{255,255,255}
@@ -4497,12 +4497,12 @@
 \path[clip] (  0.00,  0.00) rectangle (455.24,227.62);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (240.49,  7.64) {t};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (240.49,  7.64) {$t$};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (455.24,227.62);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 13.08,117.68) {x(t)};
+\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 13.08,117.68) {$x(t)$};
 \end{scope}
 \end{tikzpicture}
