Updates from Overleaf

--- a/figures/figures.tex
+++ b/figures/figures.tex
@@ -1,4 +1,5 @@
 \documentclass[tikz]{standalone}
 \begin{document}
 \include{figures/gait-data-plot.tex}
+\include{figures/amp-phase-plot.tex}
 \end{document}
