Updates from Overleaf

--- a/figures/figures.tex
+++ b/figures/figures.tex
@@ -2,5 +2,5 @@
 \begin{document}
 \include{figures/gait-data-plot.tex}
 \include{figures/amp-phase-plot.tex}
-
+\include{figures/landmark-reg-plot.tex}
 \end{document}
