--- a/figures/basis-expansion-plot.tex
+++ b/figures/basis-expansion-plot.tex
@@ -1,4 +1,4 @@
-% Created by tikzDevice version 0.12.3.1 on 2023-02-26 20:12:15
+% Created by tikzDevice version 0.12.3.1 on 2023-02-26 20:30:23
 % !TEX encoding = UTF-8 Unicode
 \begin{tikzpicture}[x=1pt,y=1pt]
 \definecolor{fillColor}{RGB}{255,255,255}
@@ -16,30 +16,6 @@
 
 \path[fill=fillColor] ( 37.13, 32.63) rectangle (240.69,202.72);
 \definecolor{drawColor}{gray}{0.92}
-
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 37.13, 61.40) --
-	(240.69, 61.40);
-
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 37.13,101.88) --
-	(240.69,101.88);
-
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 37.13,142.36) --
-	(240.69,142.36);
-
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 37.13,182.85) --
-	(240.69,182.85);
-
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 58.55, 32.63) --
-	( 58.55,202.72);
-
-\path[draw=drawColor,line width= 0.3pt,line join=round] (112.12, 32.63) --
-	(112.12,202.72);
-
-\path[draw=drawColor,line width= 0.3pt,line join=round] (165.69, 32.63) --
-	(165.69,202.72);
-
-\path[draw=drawColor,line width= 0.3pt,line join=round] (219.26, 32.63) --
-	(219.26,202.72);
 
 \path[draw=drawColor,line width= 0.6pt,line join=round] ( 37.13, 41.15) --
 	(240.69, 41.15);
@@ -5142,30 +5118,6 @@
 
 \path[fill=fillColor] (246.19, 32.63) rectangle (449.74,202.72);
 \definecolor{drawColor}{gray}{0.92}
-
-\path[draw=drawColor,line width= 0.3pt,line join=round] (246.19, 61.40) --
-	(449.74, 61.40);
-
-\path[draw=drawColor,line width= 0.3pt,line join=round] (246.19,101.88) --
-	(449.74,101.88);
-
-\path[draw=drawColor,line width= 0.3pt,line join=round] (246.19,142.36) --
-	(449.74,142.36);
-
-\path[draw=drawColor,line width= 0.3pt,line join=round] (246.19,182.85) --
-	(449.74,182.85);
-
-\path[draw=drawColor,line width= 0.3pt,line join=round] (267.61, 32.63) --
-	(267.61,202.72);
-
-\path[draw=drawColor,line width= 0.3pt,line join=round] (321.18, 32.63) --
-	(321.18,202.72);
-
-\path[draw=drawColor,line width= 0.3pt,line join=round] (374.75, 32.63) --
-	(374.75,202.72);
-
-\path[draw=drawColor,line width= 0.3pt,line join=round] (428.32, 32.63) --
-	(428.32,202.72);
 
 \path[draw=drawColor,line width= 0.6pt,line join=round] (246.19, 41.15) --
 	(449.74, 41.15);
@@ -10270,7 +10222,7 @@
 \path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] ( 37.13,202.72) rectangle (240.69,222.12);
 \definecolor{drawColor}{gray}{0.10}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.20] at (138.91,208.29) {B-Spline};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.20] at (138.91,208.29) {B-spline};
 \end{scope}
 \begin{scope}
 \path[clip] (246.19,202.72) rectangle (449.74,222.12);
