Updates from Overleaf

--- a/figures/figures.tex
+++ b/figures/figures.tex
@@ -3,5 +3,5 @@
 \include{figures/gait-data-plot.tex}
 \include{figures/amp-phase-plot.tex}
 \include{figures/landmark-reg-plot.tex}
-
+\include{figures/basis-expansion-plot.tex}
 \end{document}
