Updates from Overleaf

--- a/figures/figures.tex
+++ b/figures/figures.tex
@@ -4,4 +4,5 @@
 \include{figures/amp-phase-plot.tex}
 \include{figures/landmark-reg-plot.tex}
 \include{figures/basis-expansion-plot.tex}
+\include{figures/basis-functions-plot.tex}
 \end{document}
