--- a/figures/figures.tex
+++ b/figures/figures.tex
@@ -5,4 +5,5 @@
 \include{figures/landmark-reg-plot.tex}
 \include{figures/basis-expansion-plot.tex}
 \include{figures/basis-functions-plot.tex}
+\include{figures/gaitrec-mean-covar}
 \end{document}
