Updates from Overleaf

--- a/figures/figures.tex
+++ b/figures/figures.tex
@@ -6,4 +6,5 @@
 \include{figures/basis-expansion-plot.tex}
 \include{figures/basis-functions-plot.tex}
 \include{figures/gaitrec-mean-covar}
+\include{figures/gcv-plot}
 \end{document}
