update GCV figure

--- a/figures/gcv-plot.tex
+++ b/figures/gcv-plot.tex
@@ -1,4 +1,4 @@
-% Created by tikzDevice version 0.12.3.1 on 2023-03-25 20:24:04
+% Created by tikzDevice version 0.12.3.1 on 2023-03-25 20:51:11
 % !TEX encoding = UTF-8 Unicode
 \begin{tikzpicture}[x=1pt,y=1pt]
 \definecolor{fillColor}{RGB}{255,255,255}
@@ -5175,7 +5175,7 @@
 \path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] ( 35.48,103.94) rectangle (131.97,123.10);
 \definecolor{drawColor}{gray}{0.10}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 83.72,109.73) {$\lambda = 10^-4$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 83.72,109.73) {$\lambda = 10^{-4}$};
 \end{scope}
 \begin{scope}
 \path[clip] (137.47,103.94) rectangle (233.95,123.10);
@@ -5185,7 +5185,7 @@
 \path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (137.47,103.94) rectangle (233.95,123.10);
 \definecolor{drawColor}{gray}{0.10}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (185.71,109.73) {$\lambda = 10^-3$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (185.71,109.73) {$\lambda = 10^{-3}$};
 \end{scope}
 \begin{scope}
 \path[clip] (239.45,103.94) rectangle (335.93,123.10);
@@ -5195,7 +5195,7 @@
 \path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (239.45,103.94) rectangle (335.93,123.10);
 \definecolor{drawColor}{gray}{0.10}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (287.69,109.73) {$\lambda = 10^-2$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (287.69,109.73) {$\lambda = 10^{-2}$};
 \end{scope}
 \begin{scope}
 \path[clip] ( 35.48,198.98) rectangle (131.97,218.13);
@@ -5205,7 +5205,7 @@
 \path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] ( 35.48,198.98) rectangle (131.97,218.13);
 \definecolor{drawColor}{gray}{0.10}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 83.72,204.77) {$\lambda = 10^-7$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 83.72,204.77) {$\lambda = 10^{-7}$};
 \end{scope}
 \begin{scope}
 \path[clip] (137.47,198.98) rectangle (233.95,218.13);
@@ -5215,7 +5215,7 @@
 \path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (137.47,198.98) rectangle (233.95,218.13);
 \definecolor{drawColor}{gray}{0.10}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (185.71,204.77) {$\lambda = 10^-6$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (185.71,204.77) {$\lambda = 10^{-6}$};
 \end{scope}
 \begin{scope}
 \path[clip] (239.45,198.98) rectangle (335.93,218.13);
@@ -5225,7 +5225,7 @@
 \path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (239.45,198.98) rectangle (335.93,218.13);
 \definecolor{drawColor}{gray}{0.10}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (287.69,204.77) {$\lambda = 10^-5$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (287.69,204.77) {$\lambda = 10^{-5}$};
 \end{scope}
 \begin{scope}
 \path[clip] ( 35.48,294.01) rectangle (131.97,313.17);
@@ -5235,7 +5235,7 @@
 \path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] ( 35.48,294.01) rectangle (131.97,313.17);
 \definecolor{drawColor}{gray}{0.10}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 83.72,299.80) {$\lambda = 10^-10$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 83.72,299.80) {$\lambda = 10^{-10}$};
 \end{scope}
 \begin{scope}
 \path[clip] (137.47,294.01) rectangle (233.95,313.17);
@@ -5245,7 +5245,7 @@
 \path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (137.47,294.01) rectangle (233.95,313.17);
 \definecolor{drawColor}{gray}{0.10}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (185.71,299.80) {$\lambda = 10^-9$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (185.71,299.80) {$\lambda = 10^{-9}$};
 \end{scope}
 \begin{scope}
 \path[clip] (239.45,294.01) rectangle (335.93,313.17);
@@ -5255,7 +5255,7 @@
 \path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (239.45,294.01) rectangle (335.93,313.17);
 \definecolor{drawColor}{gray}{0.10}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (287.69,299.80) {$\lambda = 10^-8$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (287.69,299.80) {$\lambda = 10^{-8}$};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (682.86,318.67);
@@ -5445,37 +5445,37 @@
 	(628.04,198.35) --
 	(631.67,236.95) --
 	(635.30,284.63);
-\definecolor{drawColor}{RGB}{0,185,227}
-\definecolor{fillColor}{RGB}{0,185,227}
+\definecolor{drawColor}{RGB}{0,191,196}
+\definecolor{fillColor}{RGB}{0,191,196}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor,fill opacity=0.30] (566.69, 50.97) --
-	(568.52, 51.80) --
-	(570.04, 53.10) --
-	(571.14, 54.78) --
-	(571.73, 56.70) --
-	(571.82, 57.80) --
-	(571.82, 61.68) --
-	(571.53, 63.66) --
-	(570.71, 65.49) --
-	(569.40, 67.02) --
-	(567.72, 68.12) --
-	(565.81, 68.70) --
-	(564.70, 68.79) --
-	(560.83, 68.79) --
-	(558.84, 68.51) --
-	(557.01, 67.68) --
-	(555.49, 66.38) --
-	(554.39, 64.70) --
-	(553.80, 62.78) --
-	(553.71, 61.68) --
-	(553.71, 57.80) --
-	(554.00, 55.81) --
-	(554.82, 53.98) --
-	(556.13, 52.46) --
-	(557.81, 51.36) --
-	(559.73, 50.77) --
-	(560.83, 50.69) --
-	(564.70, 50.69) --
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor,fill opacity=0.30] (530.43, 49.15) --
+	(532.25, 49.98) --
+	(533.78, 51.28) --
+	(534.88, 52.96) --
+	(535.47, 54.88) --
+	(535.55, 55.98) --
+	(535.55, 59.86) --
+	(535.27, 61.85) --
+	(534.44, 63.68) --
+	(533.14, 65.20) --
+	(531.46, 66.30) --
+	(529.54, 66.89) --
+	(528.44, 66.97) --
+	(524.56, 66.97) --
+	(522.57, 66.69) --
+	(520.75, 65.86) --
+	(519.22, 64.56) --
+	(518.12, 62.88) --
+	(517.53, 60.96) --
+	(517.45, 59.86) --
+	(517.45, 55.98) --
+	(517.73, 54.00) --
+	(518.56, 52.17) --
+	(519.86, 50.64) --
+	(521.54, 49.54) --
+	(523.46, 48.96) --
+	(524.56, 48.87) --
+	(528.44, 48.87) --
 	cycle;
 \definecolor{drawColor}{RGB}{248,118,109}
 \definecolor{fillColor}{RGB}{248,118,109}
@@ -5509,6 +5509,38 @@
 \definecolor{fillColor}{RGB}{219,114,251}
 
 \path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (635.30,284.63) circle (  2.50);
+\definecolor{drawColor}{RGB}{190,190,190}
+\definecolor{fillColor}{RGB}{169,169,169}
+
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 4pt off 4pt ,line join=round,line cap=round,fill=fillColor,fill opacity=0.30] (583.32, 50.26) --
+	(585.14, 51.08) --
+	(586.67, 52.39) --
+	(587.77, 54.07) --
+	(588.36, 55.99) --
+	(588.44, 57.09) --
+	(588.44, 64.73) --
+	(588.16, 66.72) --
+	(587.33, 68.55) --
+	(586.03, 70.08) --
+	(584.35, 71.18) --
+	(582.43, 71.76) --
+	(581.33, 71.85) --
+	(493.43, 71.85) --
+	(491.44, 71.56) --
+	(489.62, 70.74) --
+	(488.09, 69.43) --
+	(486.99, 67.75) --
+	(486.40, 65.84) --
+	(486.32, 64.73) --
+	(486.32, 57.09) --
+	(486.60, 55.10) --
+	(487.43, 53.27) --
+	(488.73, 51.75) --
+	(490.41, 50.65) --
+	(492.33, 50.06) --
+	(493.43, 49.97) --
+	(581.33, 49.97) --
+	cycle;
 \definecolor{drawColor}{gray}{0.20}
 
 \path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round] (375.63, 35.07) rectangle (677.36,296.74);
@@ -5561,7 +5593,7 @@
 \path[clip] (  0.00,  0.00) rectangle (682.86,318.67);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (354.51,165.91) {GCV};
+\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (354.51,165.91) {GCV$(\lambda)$};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (682.86,318.67);
