add functional data in theory and practice

--- a/figures/gcv-plot.tex
+++ b/figures/gcv-plot.tex
@@ -5329,8 +5329,8 @@
 
 \node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 13.08,163.79) {Angle ($^{\circ}$)};
 \end{scope}
-\begin{scope}
-\path[clip] (341.43,  0.00) rectangle (682.86,318.67);
+\end{tikzpicture}
+h[clip] (341.43,  0.00) rectangle (682.86,318.67);
 \definecolor{drawColor}{RGB}{255,255,255}
 \definecolor{fillColor}{RGB}{255,255,255}
 
