Updates from Overleaf

--- a/figures/figures.tex
+++ b/figures/figures.tex
@@ -1,4 +1,5 @@
 \documentclass[tikz]{standalone}
+\usepackage{upgreek}
 \begin{document}
 \include{figures/gait-data-plot.tex}
 \include{figures/amp-phase-plot.tex}
@@ -7,4 +8,5 @@
 \include{figures/basis-functions-plot.tex}
 \include{figures/gaitrec-mean-covar}
 \include{figures/gcv-plot}
+\include{figures/fosr-2s}
 \end{document}
