try get figure working

--- a/figures/fosr-2s.tex
+++ b/figures/fosr-2s.tex
@@ -1,4 +1,4 @@
-% Created by tikzDevice version 0.12.3.1 on 2023-03-27 19:21:26
+% Created by tikzDevice version 0.12.3.1 on 2023-03-27 19:26:32
 % !TEX encoding = UTF-8 Unicode
 \begin{tikzpicture}[x=1pt,y=1pt]
 \definecolor{fillColor}{RGB}{255,255,255}
@@ -434,111 +434,111 @@
 	(604.06,124.56);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 48.49,105.58) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 48.49,105.58) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 59.18, 91.00) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 59.18, 91.00) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 69.86, 93.21) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 69.86, 93.21) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 80.54,102.85) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 80.54,102.85) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 91.23, 75.87) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 91.23, 75.87) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (101.91,145.74) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (101.91,145.74) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (112.60,119.50) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (112.60,119.50) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (123.28, 72.80) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (123.28, 72.80) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (133.96,163.06) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (133.96,163.06) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (144.65, 72.31) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (144.65, 72.31) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (155.33,149.20) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (155.33,149.20) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (166.02,115.74) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (166.02,115.74) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (176.70,115.39) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (176.70,115.39) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (187.39,131.44) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (187.39,131.44) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (198.07,174.85) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (198.07,174.85) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (208.75,184.99) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (208.75,184.99) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (219.44,243.88) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (219.44,243.88) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (230.12,261.37) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (230.12,261.37) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (240.81,318.45) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (240.81,318.45) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (251.49,300.05) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (251.49,300.05) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (262.17,310.41) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (262.17,310.41) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (272.86,365.55) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (272.86,365.55) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (283.54,384.65) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (283.54,384.65) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (294.23,404.55) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (294.23,404.55) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (304.91,395.14) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (304.91,395.14) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (315.59,426.44) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (315.59,426.44) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (326.28,426.34) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (326.28,426.34) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (336.96,412.83) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (336.96,412.83) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (347.65,412.46) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (347.65,412.46) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (358.33,400.38) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (358.33,400.38) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (369.01,412.94) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (369.01,412.94) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (379.70,395.18) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (379.70,395.18) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (390.38,379.96) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (390.38,379.96) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (401.07,387.70) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (401.07,387.70) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (411.75,338.14) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (411.75,338.14) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (422.43,346.58) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (422.43,346.58) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (433.12,314.79) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (433.12,314.79) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (443.80,337.76) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (443.80,337.76) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (454.49,313.76) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (454.49,313.76) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (465.17,295.73) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (465.17,295.73) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (475.85,300.45) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (475.85,300.45) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (486.54,238.11) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (486.54,238.11) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (497.22,204.61) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (497.22,204.61) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (507.91,191.29) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (507.91,191.29) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (518.59,127.33) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (518.59,127.33) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (529.27,126.13) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (529.27,126.13) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (539.96, 77.16) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (539.96, 77.16) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (550.64, 36.41) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (550.64, 36.41) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (561.33, 69.83) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (561.33, 69.83) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (572.01, 56.98) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (572.01, 56.98) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (582.69,108.05) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (582.69,108.05) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (593.38, 97.94) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (593.38, 97.94) {$\beta$};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (604.06,128.98) {$\upbeta$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (604.06,128.98) {$\beta$};
 \definecolor{drawColor}{gray}{0.20}
 
 \path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round] ( 20.71, 20.71) rectangle (631.84,449.74);
@@ -560,24 +560,24 @@
 \definecolor{drawColor}{RGB}{211,211,211}
 \definecolor{fillColor}{RGB}{255,255,255}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] ( 52.08,380.64) rectangle (233.80,411.59);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] ( 52.30,380.64) rectangle (233.58,411.59);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (637.34,455.24);
 \definecolor{fillColor}{RGB}{255,255,255}
 
-\path[fill=fillColor] ( 57.58,386.14) rectangle ( 72.04,400.59);
+\path[fill=fillColor] ( 57.80,386.14) rectangle ( 72.26,400.59);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (637.34,455.24);
 \definecolor{drawColor}{RGB}{139,0,0}
 
-\path[draw=drawColor,line width= 1.7pt,line join=round] ( 59.03,393.36) -- ( 70.59,393.36);
+\path[draw=drawColor,line width= 1.7pt,line join=round] ( 59.25,393.36) -- ( 70.81,393.36);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (637.34,455.24);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  1.00] at ( 77.54,389.92) {Smoothed coefficient function $\widehat{\upbeta} (t)$};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  1.00] at ( 77.76,389.92) {Smoothed coefficient function $\widehat{\beta} (t)$};
 \end{scope}
 \end{tikzpicture}
